# shopery-backend

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  bootstrap.sh  config.template.env  config.test.env  dev-server.sh  docker-compose.test.yml  docker-compose.yml  downgrade.sh  lint.sh  makemigrations.sh  migrate.sh  nginx_config.conf  pyproject.toml  test.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 00aaaeffb22f_add_store_module_inbox_model.py  17058ede26d6_add_products_module_tables.py  65b3fb366780_add_event_type_field_to_store_inbox.py  ef90cbf219af_introduce_language_and_currency_split.py
src/: api.py  bootstrap.py
src/common/: config.py  cors.py  fastapi_utils.py  model.py  redis.py  s3.py  sql.py  tasks.py  time.py
src/products/: api.py  dto.py  model.py  service.py
src/store/: api.py  dto.py  model.py  service.py  tasks.py
tests/: test_product_management.py
