[tool.poetry]
name = "shopery"
version = "0.1.0"
description = ""
authors = ["Marcin Sawicki <marcin.z.sawicki@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
