[tool.poetry]
name = "shopery"
version = "0.1.0"
description = ""
authors = ["Marcin Sawicki <marcin.z.sawicki@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
pytest-asyncio = "^0.23.6"
urllib3 = "^2.2.1"
boto3 = "^1.34.89"
awscli = "^1.32.91"
boto3-stubs = "^1.34.91"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"
localstack = "^3.3.0"
awscli-local = "^0.22.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
